FIxed IA toolbar overflows/wraps on mobile #10063 (#10205)
* IA toolbar overflows/wraps on mobile #10063

--- a/static/css/components/page-banner.less
+++ b/static/css/components/page-banner.less
@@ -13,6 +13,7 @@
   padding: 15px;
   border-bottom: 1px solid @beige;
   z-index: @z-index-level-2;
+  overflow-y: hidden;
 
   &-mybooks {
     color: @black;
